--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="assets/img/llaima.jpg" alt="">
             <h3>Foto paisaje volcán Llaima</h3>
             <input type="text" id="cantidad" placeholder="Catidad">
-            <input type="text" name="color" id="color" placeholder="Color">
+            Seleccione color<input type="color" name="color" id="color">
             <p >Precio: <span id="precio">12000</span></p>
             <button id="boton" onclick="compraTotal()" >Calcular Total</button>
         </div>
